Results/k8s_files/Caliopen/service_1_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: smtp-service
spec:
  ports:
  - name: main
    nodePort: 30000
    port: 2500
    protocol: TCP
    targetPort: 2500
  - name: extra
    nodePort: 30001
    port: 8888
    protocol: TCP
    targetPort: 8888
  selector:
    app: smtp
  type: NodePort
