Results/k8s_files/Caliopen/service_2.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmtpd
spec:
  ports:
  - name: lmtpd
    port: 2525
    protocol: TCP
  selector: {}
