Results/k8s_files/Caliopen/service_2_MiDKo.yaml
apiVersion: v1
kind: Service
metadata:
  name: lmtpd
spec:
  ports:
  - port: 2525
    protocol: TCP
    targetPort: 2525
  selector:
    app: lmtpd
  type: ClusterIP
