Results/k8s_files/Caliopen/deployment_1_MiDKo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: smtp-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: smtp-server
  template:
    metadata:
      labels:
        app: smtp-server
    spec:
      containers:
      - image: jhillyerd/inbucket:latest
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /health
            port: 80
        name: smtp-server
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
        resources:
          limits:
            cpu: 500m
            ephemeral-storage: 1Gi
            memory: 512Mi
          requests:
            cpu: 100m
            ephemeral-storage: 500Mi
            memory: 128Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsGroup: 1000
          runAsUser: 1000
      serviceAccountName: default
      volumes: []
---
apiVersion: v1
kind: Service
metadata:
  name: smtp-server
spec:
  ports:
  - port: 80
  selector:
    app: smtp-server
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smtp-server
spec:
  rules:
  - host: example.com
    http:
      paths:
      - backend:
          service:
            name: smtp-server
            port:
              number: 80
        path: /
        pathType: Prefix
